// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[presentation] <Image /> renders correctly with minimum props 1`] = `
<figure
  class="Image TestImage isLoading"
>
  <div
    class="Image-wrapper"
  >
    <img />
    <span
      class="Loader"
    >
      <div
        class="Loader-animation"
      >
        <span />
        <span />
        <span />
      </div>
    </span>
  </div>
</figure>
`;

exports[`[presentation] <Image /> updates \`isRendered\` state and triggers \`onLoad\` prop after image has loaded 1`] = `
<figure
  class="Image TestImage isRendered"
>
  <div
    class="Image-wrapper"
  >
    <img />
  </div>
</figure>
`;

exports[`[presentation] <Image /> updates \`isRendered\` state when image has previously been loaded 1`] = `
<figure
  class="Image TestImage isRendered"
>
  <div
    class="Image-wrapper"
  >
    <img />
  </div>
</figure>
`;
